--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DALProduto.cs" />
     <Compile Include="DALSubCategoria.cs" />
     <Compile Include="DALTipoPagamento.cs" />
+    <Compile Include="DALUnidadeDeMedida.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
